Updating image file location

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body,
 html {
-  background: url("C:/Users/ianal/OneDrive/Desktop/A_ZTM_coding/landing_page/startup_files/header.jpg") no-repeat center center fixed; 
+  background: url("https://awakened888.github.io/header.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
